@@ -24,9 +24,9 @@
 require __DIR__ . '/preloads/autoloader.php';
 $moduleDirName = basename(__DIR__);
 $modversion    = [
-    'version'             => 1.56,
-    'module_status'       => 'Final',
-    'release_date'        => '2021/08/06',
+    'version'             => '1.56.1',
+    'module_status'       => 'Beta 1',
+    'release_date'        => '2022/02/20',
     'name'                => _MI_XSITEMAP_NAME,
     'description'         => _MI_XSITEMAP_DESC,
     'author'              => 'Urbanspaceman',
