@@ -1,4 +1,8 @@
-<h5>1.56 Final [2021-08-06]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.8
+<h5>1.56.1 Beta 1 [2022-02-20]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
+<hr>
+- index.html in /preloads (mamba)
+
+<h5>1.56.0 Final [2021-08-06]</h5>   Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.8
 <hr>
 - PHP8, cosmetics (mamba)
 
